# torch_test

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
mnist/: load.py
notebooks/: classification.ipynb  simple.ipynb  simple_nn.ipynb  torch.ipynb
src/: __init__.py  load.py
