[tool.poetry]
name = "mnist"
version = "0.1.0"
description = "Interpretable Deep Learning on simple MNIST dataset"
authors = ["Gabriel Watkinson <gabriel.watkinson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.9,<3.11"
pandas = "^1.4.0"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.5.0"
scikit-learn = "^1.0.2"
safety = "^1.10.3"
bandit = "^1.7.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.8"
jupyterlab = "^3.2.8"
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
